--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@tanstack/react-query": "^5.84.1",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
